# sm64LinuxBuilder

./: README.md  _config.yml  com.github.WryOpussum.sm64LinuxBuilder.json  file_chooser.py  main.py  meson.build  romSelectionStorage.py
.github/workflows/: main.yml
data/: com.github.WryOpussum.sm64LinuxBuilder.appdata.xml.in  com.github.WryOpussum.sm64LinuxBuilder.desktop.in  com.github.WryOpussum.sm64LinuxBuilder.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  sm64linuxbuilder.in
